--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
 
     <div class="container">
         <div class="intro">
-            <!-- EDIT THIS: Your name in italic style -->
-            <h1>Your Name</h1>
+            <h1>Sonya Rashkovan</h1>
             
             <!-- EDIT THIS: Your bio/introduction 
                  You can add multiple paragraphs with <p> tags
