--- a/index.html
+++ b/index.html
@@ -142,14 +142,11 @@
     <div class="container">
         <div class="intro">
             <h1>Sonya Rashkovan</h1>
-            
-            <!-- EDIT THIS: Your bio/introduction 
-                 You can add multiple paragraphs with <p> tags
-                 Add links with <a href="URL">text</a> -->
             <div class="bio">
                 <p>
-                    Hi! I'm [Your Name], a [your role] [doing what]. 
-                    I am currently a [position] at <a href="#">Organization</a> 
+                    Hi! I'm Sonya, a digital anthropologist, researching how culture and tech interact with each other.
+                    I am currently a 
+                    [position] at <a href="#">Organization</a> 
                     advised by <a href="#">Advisor Name</a> and <a href="#">Another Advisor</a>.
                 </p>
                 <p>
@@ -158,23 +155,18 @@
                 </p>
             </div>
 
-            <!-- EDIT THIS: Your contact/social links -->
             <div class="links">
-                <a href="mailto:your.email@example.com">Email</a>
-                <a href="https://linkedin.com/in/yourprofile">LinkedIn</a>
-                <a href="https://twitter.com/yourhandle">Twitter</a>
-                <a href="path/to/cv.pdf">CV</a>
+                <a href="mailto:sonya.rashkovan@gmail.com">Email</a>
+                <a href="https://www.linkedin.com/in/sonya-rashkovan-0b333120b/">LinkedIn</a>
+                <a href="https://sonyarashkovan.substack.com/">Substack</a>
+                <a href="https://drive.google.com/file/d/1WcCOo9TZop8PS4C77pV7NxGLFsAf_yqf/view?usp=sharing">CV</a>
             </div>
         </div>
 
-        <!-- EDIT THIS: Replace with your photo 
-             Option 1: Add your photo to an 'images' folder and link it
-             Option 2: Use a placeholder service
-             Remove the text inside and add: <img src="images/your-photo.jpg" alt="Your Name" style="width: 100%; height: 100%; object-fit: cover;"> -->
-        <div class="photo-placeholder">
-            Your Photo Here<br>
-            (Replace this div content)
-        </div>
-    </div>
-</body>
-</html>
+<!-- AFTER -->
+<div class="photo-placeholder">
+    <img src="https://drive.google.com/uc?export=view&id=1WbpD_mdOS01gu_QyArP3S_vJG0ddnCT4" 
+         alt="Sonya Rashkovan" 
+         style="width: 100%; height: 100%; object-fit: cover;">
+</div>
+```
