--- a/index.html
+++ b/index.html
@@ -163,10 +163,9 @@
             </div>
         </div>
 
-<!-- AFTER -->
 <div class="photo-placeholder">
-    <img src="https://drive.google.com/uc?export=view&id=1WbpD_mdOS01gu_QyArP3S_vJG0ddnCT4" 
+    <img src="images/Sonya Headshot 3 (1).jpg" 
          alt="Sonya Rashkovan" 
          style="width: 100%; height: 100%; object-fit: cover;">
 </div>
-```
+
