--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
         </div>
 
 <div class="photo-placeholder">
-    <img src="images/Sonya Headshot 3 (1).jpg" 
+    <img src="images/sonya-headshot.jpg" 
          alt="Sonya Rashkovan" 
          style="width: 100%; height: 100%; object-fit: cover;">
 </div>
-
