--- a/index.html
+++ b/index.html
@@ -166,6 +166,6 @@
 <div class="photo-placeholder">
     <img src="images/sonya-headshot.jpg" 
          alt="Sonya Rashkovan" 
+         loading="lazy"
          style="width: 100%; height: 100%; object-fit: cover;">
 </div>
-
