--- a/index.html
+++ b/index.html
@@ -145,9 +145,8 @@
             <div class="bio">
                 <p>
                     Hi! I'm Sonya, a digital anthropologist, researching how culture and tech interact with each other.
-                    I am currently a 
-                    [position] at <a href="#">Organization</a> 
-                    advised by <a href="#">Advisor Name</a> and <a href="#">Another Advisor</a>.
+                    I am currently at Brown University. </a> 
+                    I am at the GIRAFFE lab, advised by Prof. Serena Booth, working on human preference coding and studying in debate settings. 
                 </p>
                 <p>
                     I am affiliated with the <a href="#">Center/Lab Name</a> 
