--- a/index.html
+++ b/index.html
@@ -142,13 +142,20 @@
     <div class="container">
         <div class="intro">
             <h1>Sonya Rashkovan</h1>
-            <div class="bio">
-                <p>
-                    Hi! I'm Sonya, a digital anthropologist, researching how culture and tech interact with each other.
-                    I am currently at Brown University. </a> 
-                    I am at the GIRAFFE lab, advised by Prof. Serena Booth, working on human preference coding and studying in debate settings. 
-                </p>
-                <p>
+           <div class="bio">
+    <p>
+        Hi! I'm Sonya, a digital anthropologist, researching how culture and tech interact with each other.
+        I am currently at <a href="https://www.brown.edu/">Brown University</a>.
+    </p>
+    <p>
+        I am at the <a href="https://slbooth.com/">GIRAFFE lab</a>, advised by <a href="https://slbooth.com/">Prof. Serena Booth</a>, working on human preference coding and studying in debate settings.
+    </p>
+    <p>
+        I also work at the <a href="https://library.brown.edu/create/libnews/critical-ai-learning-community-fall-2025/">Critical AI Learning Community</a>, where I am on the planning team for weekly round tables on AI implementation in workflows and education.
+    </p>
+</div>
+
+                    
 
             <div class="links">
                 <a href="mailto:sonya.rashkovan@gmail.com">Email</a>
