--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         I am currently at <a href="https://www.brown.edu/">Brown University</a>.
     </p>
     <p>
-        I am at the <a href="https://slbooth.com/">GIRAFFE lab</a>, advised by <a href="https://slbooth.com/">Prof. Serena Booth</a>, working on human preference coding and studying in debate settings.
+        I am at the GIRAFFE lab, advised by <a href="https://slbooth.com/">Prof. Serena Booth</a>, working on human preference coding and studying in debate settings.
     </p>
     <p>
         I also work at the <a href="https://library.brown.edu/create/libnews/critical-ai-learning-community-fall-2025/">Critical AI Learning Community</a>, where I am on the planning team for weekly round tables on AI implementation in workflows and education.
