--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
             <h1>Sonya Rashkovan</h1>
            <div class="bio">
     <p>
-        Hi! I'm Sonya, a digital anthropologist, researching how culture and tech interact with each other.
-        I am currently at <a href="https://www.brown.edu/">Brown University</a>.
+        Hi! I'm Sonya, a digital anthropologist, researching how culture and tech interact with each other, currently at Brown University.
     </p>
     <p>
         I am at the GIRAFFE lab, advised by <a href="https://slbooth.com/">Prof. Serena Booth</a>, working on human preference coding and studying in debate settings.
