--- a/talks.html
+++ b/talks.html
@@ -169,7 +169,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="index.html">Your Initials</a>
+            <a href="index.html">SR</a>
         </div>
         <ul class="nav-links">
             <li><a href="projects.html">Projects</a></li>
@@ -187,10 +187,10 @@
             <div class="talk-overlay">
                 <h3 class="talk-title">Talk Title</h3>
                 <p class="talk-description">
-                    Brief description of what this talk was about.
+                   Represented Ukraine at the UN meeting on the thirtieth anniversary of the adoption of the Convention on the Rights of the Child to speak about the need to protect children's digital rights.  
                 </p>
-                <p class="talk-venue">Conference Name, Location</p>
-                <a href="#" class="talk-link">Watch Recording →</a>
+                <p class="talk-venue">UN General Assembly, New York</p>
+                <a href="#" class="https://www.youtube.com/watch?v=rJL0vwB7YdY">Watch Recording →</a>
             </div>
         </div>
 
