--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         Hi! I'm Sonya, a digital anthropologist, researching how culture and tech interact with each other, currently at Brown University.
     </p>
     <p>
-        I am at the GIRAFFE lab, advised by <a href="https://slbooth.com/">Prof. Serena Booth</a>, working on human preference coding and studying in debate settings.
+        I am at the GIRAFFE lab, advised by <a href="https://slbooth.com/">Prof. Serena Booth</a>, working on coding and studying human preference in debate settings.
     </p>
     <p>
         I also work at the <a href="https://library.brown.edu/create/libnews/critical-ai-learning-community-fall-2025/">Critical AI Learning Community</a>, where I am on the planning team for weekly round tables on AI implementation in workflows and education.
