--- a/talks.html
+++ b/talks.html
@@ -182,7 +182,7 @@
     <div class="talks-grid">
         
         <!-- TALK ITEM 1 -->
-        <div class="talk-item">
+        <div class="Copyright at the UN GA">
             <img src="https://images.unsplash.com/photo-1540575467063-178a50c2df87?w=800" alt="Talk" class="talk-image">
             <div class="talk-overlay">
                 <h3 class="talk-title">Talk Title</h3>
