--- a/talks.html
+++ b/talks.html
@@ -183,7 +183,7 @@
         
         <!-- TALK ITEM 1 -->
         <div class="Copyright at the UN GA">
-            <img src="https://images.unsplash.com/photo-1540575467063-178a50c2df87?w=800" alt="Talk" class="talk-image">
+            <img <img src="images/UN.jpn" alt="UN" class="talk-image">
             <div class="talk-overlay">
                 <h3 class="talk-title">Talk Title</h3>
                 <p class="talk-description">
