--- a/talks.html
+++ b/talks.html
@@ -182,10 +182,10 @@
     <div class="talks-grid">
         
         <!-- TALK ITEM 1 -->
-        <div class="Copyright at the UN GA">
+        <div class="talk-item">
             <img src="images/UN.jpn" alt="UN" class="talk-image">
             <div class="talk-overlay">
-                <h3 class="talk-title">Talk Title</h3>
+                <h3 class="talk-title">Children's tech privacy at the UNGA</h3>
                 <p class="talk-description">
                    Represented Ukraine at the UN meeting on the thirtieth anniversary of the adoption of the Convention on the Rights of the Child to speak about the need to protect children's digital rights.  
                 </p>
