--- a/index.html
+++ b/index.html
@@ -63,23 +63,29 @@
             color: #083D77;
         }
 
-        .links {
-            display: flex;
-            gap: 2rem;
-            margin-top: 3rem;
-        }
+     .links {
+    display: flex;
+    gap: 1rem;
+    margin-top: 3rem;
+    flex-wrap: wrap;
+}
 
-        .links a {
-            color: #021427;
-            text-decoration: none;
-            font-weight: 500;
-            border-bottom: 2px solid transparent;
-            transition: border-color 0.3s ease;
-        }
+.links a {
+    color: #EBEBD3;
+    background: #083D77;
+    text-decoration: none;
+    font-weight: 600;
+    padding: 0.75rem 1.75rem;
+    border-radius: 25px;
+    transition: all 0.3s ease;
+    display: inline-block;
+}
 
-        .links a:hover {
-            border-bottom-color: #5786B2;
-        }
+.links a:hover {
+    background: #5786B2;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(8, 61, 119, 0.3);
+}
 
         .photo-placeholder {
             width: 100%;
@@ -93,25 +99,31 @@
         }
 
         /* Navigation to other pages */
-        nav {
-            position: fixed;
-            top: 2rem;
-            right: 2rem;
-            display: flex;
-            gap: 2rem;
-        }
+nav {
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    display: flex;
+    gap: 1rem;
+}
 
-        nav a {
-            color: #021427;
-            text-decoration: none;
-            font-weight: 500;
-            padding: 0.5rem 1rem;
-            transition: background 0.3s ease;
-        }
+nav a {
+    color: #EBEBD3;
+    background: #083D77;
+    text-decoration: none;
+    font-weight: 600;
+    padding: 0.75rem 1.5rem;
+    border-radius: 25px;
+    transition: all 0.3s ease;
+    font-size: 0.95rem;
+    letter-spacing: 0.02em;
+}
 
-        nav a:hover {
-            background: rgba(87, 134, 178, 0.2);
-        }
+nav a:hover {
+    background: #5786B2;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(8, 61, 119, 0.3);
+}
 
         @media (max-width: 640px) {
     .container {
