--- a/talks.html
+++ b/talks.html
@@ -183,15 +183,14 @@
         
         <!-- TALK ITEM 1 -->
         <div class="talk-item">
-            <img src="images/UN.jpn" alt="UN" class="talk-image">
+            <img src="images/UN.jpg" alt="UN" class="talk-image">
             <div class="talk-overlay">
                 <h3 class="talk-title">Children's tech privacy at the UNGA</h3>
                 <p class="talk-description">
                    Represented Ukraine at the UN meeting on the thirtieth anniversary of the adoption of the Convention on the Rights of the Child to speak about the need to protect children's digital rights.  
                 </p>
                 <p class="talk-venue">UN General Assembly, New York</p>
-                <a href="#" class="https://www.youtube.com/watch?v=rJL0vwB7YdY">Watch Recording →</a>
-            </div>
+<a href="https://www.youtube.com/watch?v=rJL0vwB7YdY" class="talk-link">Watch Recording →</a>            </div>
         </div>
 
         <!-- SOLID CARD -->
