--- a/talks.html
+++ b/talks.html
@@ -181,18 +181,18 @@
 
     <div class="talks-grid">
         
-        <!-- TALK ITEM 1 -->
-        <div class="talk-item">
-            <img src="images/UN.jpg" alt="UN" class="talk-image">
-            <div class="talk-overlay">
-                <h3 class="talk-title">Children's tech privacy at the UNGA</h3>
-                <p class="talk-description">
-                   Represented Ukraine at the UN meeting on the thirtieth anniversary of the adoption of the Convention on the Rights of the Child to speak about the need to protect children's digital rights.  
-                </p>
-                <p class="talk-venue">UN General Assembly, New York</p>
-<a href="https://www.youtube.com/watch?v=rJL0vwB7YdY" class="talk-link">Watch Recording →</a>            </div>
-        </div>
-
+<!-- TALK ITEM 1 -->
+<div class="talk-item">
+    <img src="images/UN.jpg" alt="UN" class="talk-image">
+    <div class="talk-overlay">
+        <h3 class="talk-title">Children's tech privacy at the UNGA</h3>
+        <p class="talk-description">
+           Represented Ukraine at the UN meeting on the thirtieth anniversary of the adoption of the Convention on the Rights of the Child to speak about the need to protect children's digital rights.  
+        </p>
+        <p class="talk-venue">UN General Assembly, New York</p>
+        <a href="https://www.youtube.com/watch?v=rJL0vwB7YdY" class="talk-link">Watch Recording →</a>
+    </div>
+</div>
         <!-- SOLID CARD -->
         <div class="talk-item solid bg-prussian">
             <h2>Speaking<br>Engagements</h2>
