--- a/index.html
+++ b/index.html
@@ -63,40 +63,39 @@
             color: #083D77;
         }
 
-     .links {
+.links {
     display: flex;
-    gap: 1rem;
+    gap: 2.5rem;
     margin-top: 3rem;
-    flex-wrap: wrap;
 }
 
 .links a {
-    color: #EBEBD3;
-    background: #083D77;
+    color: #021427;
     text-decoration: none;
-    font-weight: 600;
-    padding: 0.75rem 1.75rem;
-    border-radius: 25px;
-    transition: all 0.3s ease;
-    display: inline-block;
+    font-weight: 500;
+    font-size: 1rem;
+    position: relative;
+    transition: color 0.3s ease;
+}
+
+.links a::after {
+    content: '';
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: #083D77;
+    transition: width 0.3s ease;
 }
 
 .links a:hover {
-    background: #5786B2;
-    transform: translateY(-2px);
-    box-shadow: 0 4px 12px rgba(8, 61, 119, 0.3);
+    color: #083D77;
 }
 
-        .photo-placeholder {
-            width: 100%;
-            aspect-ratio: 3/4;
-            background: #7A94A5; /* Cool Steel */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #EBEBD3;
-            font-size: 1rem;
-        }
+.links a:hover::after {
+    width: 100%;
+}
 
         /* Navigation to other pages */
 nav {
@@ -104,41 +103,36 @@ nav {
     top: 2rem;
     right: 2rem;
     display: flex;
-    gap: 1rem;
+    gap: 2.5rem;
 }
 
 nav a {
-    color: #EBEBD3;
-    background: #083D77;
+    color: #021427;
     text-decoration: none;
-    font-weight: 600;
-    padding: 0.75rem 1.5rem;
-    border-radius: 25px;
-    transition: all 0.3s ease;
-    font-size: 0.95rem;
+    font-weight: 500;
+    font-size: 1rem;
     letter-spacing: 0.02em;
+    position: relative;
+    transition: color 0.3s ease;
+}
+
+nav a::after {
+    content: '';
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: #083D77;
+    transition: width 0.3s ease;
 }
 
 nav a:hover {
-    background: #5786B2;
-    transform: translateY(-2px);
-    box-shadow: 0 4px 12px rgba(8, 61, 119, 0.3);
+    color: #083D77;
 }
 
-        @media (max-width: 640px) {
-    .container {
-        grid-template-columns: 1fr;
-        gap: 2rem;
-    }
-
-    h1 {
-        font-size: 2.5rem;
-    }
-
-    nav {
-        position: static;
-        margin-bottom: 2rem;
-    }
+nav a:hover::after {
+    width: 100%;
 }
     </style>
 </head>
