--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ nav a:hover::after {
 
 <div class="photo-placeholder">
     <img src="images/sonya-headshot.jpg" 
-         alt="Sonya Rashkovan" 
-         loading="lazy"
-         style="width: 100%; height: 100%; object-fit: cover;">
+     alt="Sonya Rashkovan" 
+     loading="lazy"
+     style="width: 100%; height: 100%; object-fit: cover; object-position: center 30%;">
 </div>
