--- a/talks.html
+++ b/talks.html
@@ -200,7 +200,7 @@
 
       <!-- TALK ITEM 2 -->
 <div class="talk-item">
-    <img src="images/UKU.jpg" alt="UN" class="talk-image">
+    <img src="images/UKU.jpg" alt="UKU" class="talk-image">
     <div class="talk-overlay">
         <h3 class="talk-title">Cultural Translation and Code</h3>
         <p class="talk-description">
