--- a/talks.html
+++ b/talks.html
@@ -202,14 +202,14 @@
 <div class="talk-item">
     <img src="images/UKU.jpg" alt="UKU" class="talk-image">
     <div class="talk-overlay">
-        <h3 class="talk-title">Cultural Translation and Code</h3>
+        <h3 class="talk-title">UKU Business Analytics and IT Course: Cultural Translation and Code</h3>
         <p class="talk-description">
             I shared theory and stories from experience on how my "translator" 
             skills help me navigate between people and code, between customer needs and digital products, 
             between community and policy. From business analytics to artificial intelligence, 
             we will discuss how to ask the right questions, see the boundaries, and build bridges 
             in the complex systems of today and the future.        </p>
-        <p class="talk-venue">Business Analytics and IT course and Ukrainian Catholic University, Lviv</p>
+        <p class="talk-venue">"Business Analytics and IT" course at Ukrainian Catholic University, Lviv</p>
     </div>
 </div>         
         
