--- a/talks.html
+++ b/talks.html
@@ -190,6 +190,7 @@
            Represented Ukraine at the UN meeting on the thirtieth anniversary of the adoption of the Convention on the Rights of the Child to speak about the need to protect children's digital rights.  
         </p>
         <p class="talk-venue">UN General Assembly, New York</p>
+        <p class="talk-date">20-Nov-2019</p>
         <a href="https://www.youtube.com/watch?v=rJL0vwB7YdY" class="talk-link">Watch Recording →</a>
     </div>
 </div>
@@ -210,6 +211,7 @@
             we will discuss how to ask the right questions, see the boundaries, and build bridges 
             in the complex systems of today and the future.        </p>
         <p class="talk-venue">"Business Analytics and IT" course at Ukrainian Catholic University, Lviv</p>
+        <p class="talk-date">1-May-2025</p>
     </div>
 </div>         
         
