--- a/talks.html
+++ b/talks.html
@@ -118,6 +118,13 @@
             margin-bottom: 1rem;
         }
 
+        .talk-date {
+            font-size: 0.85rem;
+            color: #083D77;
+            font-weight: 600;
+            margin-bottom: 1rem;
+        }
+
         .talk-link {
             color: #5786B2;
             text-decoration: none;
