--- a/talks.html
+++ b/talks.html
@@ -120,7 +120,7 @@
 
         .talk-date {
             font-size: 0.85rem;
-            color: #083D77;
+            color: #EBEBD3;
             font-weight: 600;
             margin-bottom: 1rem;
         }
