--- a/research.html
+++ b/research.html
@@ -193,7 +193,7 @@
 
         <!-- RESEARCH ITEM 2 -->
         <div class="research-item">
-            <img src="WHITE.jpg" alt="White" class="research-image">
+            <img src="White.jpg" alt="White" class="research-image">
                 <h3 class="research-title">White Laboratory of Affective Neuroscience</h3>
                 <p class="research-description">
                     Working with <a href="https://dsi.brown.edu/people/tara-white"> Professor Tara White 
