--- a/research.html
+++ b/research.html
@@ -104,21 +104,17 @@
             margin-bottom: 0.5rem;
         }
 
-        .research-description {
-            font-size: 0.95rem;
-            color: #EBEBD3;
-            line-height: 1.5;
-            margin-bottom: 1rem;
-        }
+       .research-description a {
+    color: #EBEBD3;
+    text-decoration: none;
+    font-weight: 600;
+    border-bottom: 2px solid #5786B2;
+    transition: border-color 0.3s ease;
+}
 
-        .research-description a {
-            color: #5786B2;
-            text-decoration: underline;
-        }
-
-        .research-description a:hover {
-            color: #EBEBD3;
-        }
+.research-description a:hover {
+    border-bottom-color: #EBEBD3;
+}
 
         .research-link {
             color: #5786B2;
