--- a/research.html
+++ b/research.html
@@ -190,7 +190,7 @@
 
         <!-- SOLID CARD -->
         <div class="research-item solid bg-prussian">
-            <h2>Research<br>Areas</h2>
+            <h2>Human Preferences &<br>ML</h2>
         </div>
 
         <!-- RESEARCH ITEM 2: White Lab -->
@@ -223,49 +223,6 @@
             </div>
         </div>
 
-        <!-- SOLID CARD 2 -->
-        <div class="research-item solid bg-denim">
-            <h2>AI Ethics &<br>Society</h2>
-        </div>
-
-        <!-- RESEARCH ITEM 4: Add your next research project -->
-        <div class="research-item">
-            <img src="https://images.unsplash.com/photo-1485827404703-89b55fcc595e?w=800" alt="Research" class="research-image">
-            <div class="research-overlay">
-                <h3 class="research-title">Your Research Title</h3>
-                <p class="research-description">
-                    Add your research description here. Include collaborators, focus areas, and key findings.
-                </p>
-            </div>
-        </div>
-
-        <!-- RESEARCH ITEM 5: Add another research project -->
-        <div class="research-item">
-            <img src="https://images.unsplash.com/photo-1541746972996-4e0b0f43e02a?w=800" alt="Research" class="research-image">
-            <div class="research-overlay">
-                <h3 class="research-title">Another Research Project</h3>
-                <p class="research-description">
-                    Description of this research project goes here.
-                </p>
-            </div>
-        </div>
-
     </div>
 </body>
 </html>
-
-<!-- 
-TO ADD MORE RESEARCH ITEMS:
-Copy this entire block and paste it before the closing </div> of research-grid:
-
-<div class="research-item">
-    <img src="images/your-image.jpg" alt="Research" class="research-image">
-    <div class="research-overlay">
-        <h3 class="research-title">Your Research Title</h3>
-        <p class="research-description">
-            Your description here. Can include <a href="URL">links</a> to collaborators.
-        </p>
-    </div>
-</div>
-
--->
