--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ nav a:hover::after {
 <body>
     <!-- NAVIGATION - Edit these links -->
     <nav>
-        <a href="projects.html">Projects</a>
+       <!-- <a href="projects.html">Projects</a> -->
         <a href="research.html">Research</a>
         <a href="media.html">Media</a>
         <a href="talks.html">Talks</a>
