--- a/talks.html
+++ b/talks.html
@@ -179,7 +179,7 @@
             <a href="index.html">SR</a>
         </div>
         <ul class="nav-links">
-            <li><a href="projects.html">Projects</a></li>
+        <!--    <li><a href="projects.html">Projects</a></li>  -->
             <li><a href="research.html">Research</a></li>
             <li><a href="media.html">Media</a></li>
             <li><a href="talks.html" class="active">Talks</a></li>
