--- a/research.html
+++ b/research.html
@@ -166,7 +166,7 @@
             <a href="index.html">SR</a>
         </div>
         <ul class="nav-links">
-            <li><a href="projects.html">Projects</a></li>
+     <!--       <li><a href="projects.html">Projects</a></li>  -->
             <li><a href="research.html" class="active">Research</a></li>
             <li><a href="media.html">Media</a></li>
             <li><a href="talks.html">Talks</a></li>
