--- a/media.html
+++ b/media.html
@@ -172,7 +172,7 @@
             <a href="index.html">Your Initials</a>
         </div>
         <ul class="nav-links">
-            <li><a href="projects.html">Projects</a></li>
+     <!--       <li><a href="projects.html">Projects</a></li>  -->
             <li><a href="research.html">Research</a></li>
             <li><a href="media.html" class="active">Media</a></li>
             <li><a href="talks.html">Talks</a></li>
