--- a/research.html
+++ b/research.html
@@ -104,17 +104,22 @@
             margin-bottom: 0.5rem;
         }
 
-       .research-description a {
-    color: #EBEBD3;
-    text-decoration: none;
-    font-weight: 600;
-    border-bottom: 2px solid #5786B2;
-    transition: border-color 0.3s ease;
-}
+        .research-description {
+            font-size: 0.95rem;
+            color: #EBEBD3;
+            line-height: 1.5;
+            margin-bottom: 1rem;
+        }
 
-.research-description a:hover {
-    border-bottom-color: #EBEBD3;
-}
+        .research-description a {
+            color: #EBEBD3;
+            text-decoration: underline;
+            font-weight: 400;
+        }
+
+        .research-description a:hover {
+            text-decoration: none;
+        }
 
         .research-link {
             color: #5786B2;
@@ -166,7 +171,7 @@
             <a href="index.html">SR</a>
         </div>
         <ul class="nav-links">
-     <!--       <li><a href="projects.html">Projects</a></li>  -->
+            <!-- <li><a href="projects.html">Projects</a></li> -->
             <li><a href="research.html" class="active">Research</a></li>
             <li><a href="media.html">Media</a></li>
             <li><a href="talks.html">Talks</a></li>
