--- a/research.html
+++ b/research.html
@@ -182,9 +182,9 @@
         
         <!-- RESEARCH ITEM 1: GIRAFFE Lab -->
         <div class="research-item"> 
-            <img src="images/GIRAFFE.jpg" alt="GIRAFFE Lab" class="research-image">
+            <img src="images/GIRAFFE.jpg" alt="GIRAFFE" class="research-image">
             <div class="research-overlay">
-                <h3 class="research-title">GIRAFFE Lab</h3>
+                <h3 class="research-title">Governance and Interaction for Robots and AI Foundations, Futures, Entrainment (GIRAFFE) Lab</h3>
                 <p class="research-description">
                     Working with <a href="https://slbooth.com/">Professor Serena Booth</a> on expertise embedding and constitutional AI. 
                     Collaborating with the UK AI Security Institute on AI Safety via debate. Focus on human biases when judging and adjudicating, 
