--- a/media.html
+++ b/media.html
@@ -233,7 +233,29 @@
             </div>
         </div>
 
-        <!-- Add more media items by copying the blocks above -->
+        <!-- MEDIA ITEM 2 (Article/Publication) -->
+<div class="media-item">
+    <img src="image/Deepfakes.jpg"
+         alt="Article"
+         class="media-image">
+    
+    <div class="media-overlay">
+        <span class="media-type opinion">Opinion</span>
+
+        <h3 class="media-title">
+            Politics, Patriarchy, and AI-Generated Pornography
+        </h3>
+
+        <p class="media-publication">Brown Political Review</p>
+
+        <a href="https://brownpoliticalreview.org/politics-patriarchy-and-ai-generated-pornography/"
+           class="media-link"
+           target="_blank"
+           rel="noopener">
+           Read Article →
+        </a>
+    </div>
+</div>
         
     </div>
 </body>
