--- a/media.html
+++ b/media.html
@@ -222,7 +222,7 @@
 
         <!-- MEDIA ITEM 2 (Article/Publication) -->
 <div class="media-item">
-    <img src="image/Deepfakes.jpg"
+    <img src="images/Deepfakes.jpg"
          alt="Article"
          class="media-image">
     
