--- a/media.html
+++ b/media.html
@@ -192,7 +192,7 @@
         
         <!-- MEDIA ITEM 1 (Article/Publication) -->
 <div class="media-item">
-    <img src="image/Diia.jpg"
+    <img src="images/Diia.jpg"
          alt="Article"
          class="media-image">
 
