--- a/media.html
+++ b/media.html
@@ -178,7 +178,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="index.html">Your Initials</a>
+            <a href="index.html">Sonya</a>
         </div>
         <ul class="nav-links">
      <!--       <li><a href="projects.html">Projects</a></li>  -->
