--- a/research.html
+++ b/research.html
@@ -168,7 +168,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="index.html">SR</a>
+            <a href="index.html">Sonya</a>
         </div>
         <ul class="nav-links">
             <!-- <li><a href="projects.html">Projects</a></li> -->
